--- a/src/app/MonthlyRules.form
+++ b/src/app/MonthlyRules.form
@@ -237,29 +237,25 @@
                                                           <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                                                           <Component id="spendLabel" min="-2" max="-2" attributes="0"/>
                                                       </Group>
-                                                      <Component id="jLabel15" alignment="0" min="-2" max="-2" attributes="0"/>
                                                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                                          <Group type="102" alignment="0" attributes="0">
+                                                              <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
+                                                              <EmptySpace max="32767" attributes="0"/>
+                                                              <Component id="remaining" min="-2" max="-2" attributes="0"/>
+                                                          </Group>
                                                           <Group type="102" attributes="0">
                                                               <Group type="103" groupAlignment="0" attributes="0">
                                                                   <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                                                                   <Group type="102" alignment="0" attributes="0">
                                                                       <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                                                                       <EmptySpace max="-2" attributes="0"/>
-                                                                      <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
+                                                                      <Component id="percentLimit" min="-2" max="-2" attributes="0"/>
                                                                   </Group>
                                                               </Group>
+                                                              <EmptySpace max="32767" attributes="0"/>
                                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                                  <Group type="102" attributes="0">
-                                                                      <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
-                                                                      <Component id="saveLabel1" min="-2" max="-2" attributes="0"/>
-                                                                  </Group>
-                                                                  <Group type="102" alignment="1" attributes="0">
-                                                                      <EmptySpace max="32767" attributes="0"/>
-                                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                                          <Component id="spendLabel2" alignment="1" min="-2" max="-2" attributes="0"/>
-                                                                          <Component id="spendLabel3" alignment="1" min="-2" max="-2" attributes="0"/>
-                                                                      </Group>
-                                                                  </Group>
+                                                                  <Component id="limit" alignment="1" min="-2" max="-2" attributes="0"/>
+                                                                  <Component id="income" alignment="1" min="-2" max="-2" attributes="0"/>
                                                               </Group>
                                                           </Group>
                                                           <Group type="102" attributes="0">
@@ -320,18 +316,18 @@
                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel6" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="spendLabel3" alignment="3" max="32767" attributes="0"/>
+                              <Component id="income" alignment="3" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel11" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="jLabel16" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="spendLabel2" alignment="3" max="32767" attributes="0"/>
+                              <Component id="percentLimit" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="limit" alignment="3" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel15" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="saveLabel1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="remaining" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="743" max="-2" attributes="0"/>
                       </Group>
@@ -524,7 +520,7 @@
                     <Property name="text" type="java.lang.String" value="Remaining Limit"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel16">
+                <Component class="javax.swing.JLabel" name="percentLimit">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
@@ -532,7 +528,7 @@
                     <Property name="text" type="java.lang.String" value="(&lt;0%&gt;)"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="saveLabel1">
+                <Component class="javax.swing.JLabel" name="remaining">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
@@ -540,7 +536,7 @@
                     <Property name="text" type="java.lang.String" value="&lt; amount &gt;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="spendLabel2">
+                <Component class="javax.swing.JLabel" name="limit">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
@@ -548,7 +544,7 @@
                     <Property name="text" type="java.lang.String" value="&lt; amount &gt;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="spendLabel3">
+                <Component class="javax.swing.JLabel" name="income">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
